# ZiroAI

./: CMakeLists.txt  CMakeSettings.json  ZiroAI.vcxproj  ZiroAI.vcxproj.filters
include/data/: dataset.h  tokenizer.h  vocabulary.h
include/model/: layers.h  ziroai_model.h
src/: main.cpp
src/data/: dataset.cpp  tokenizer.cpp  vocabulary.cpp
src/model/: layers.cpp  ziroai_model.cpp
x64/Debug/: vc143.idb
x64/Debug/ZiroAI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ZiroAI.lastbuildstate
